<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFF"
    tools:context=".Activity4">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".503"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".053"
        />

    <ImageView
        android:id="@+id/watch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/watch_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth="match_parent"
        app:srcCompat="@drawable/all_series" />

    <ImageButton
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:background="#FCFCFF"
        android:contentDescription="@string/arrow"
        android:onClick="buttonClick2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow__left" />

    <ImageView
        android:id="@+id/bottom_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:contentDescription="@string/white_square"
        app:layout_constraintTop_toTopOf="@id/guidelineh1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth="match_parent"
        android:background="@drawable/white_bottom"
        app:srcCompat="@drawable/white_bottom" />

    <TextView
        android:id="@+id/model"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:elevation="24dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/model3"
        android:textColor="#1B153D"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/guidelineh1"
        app:layout_constraintStart_toStartOf="@id/button_add"/>

    <TextView
        android:id="@+id/descr"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="52dp"
        android:elevation="24dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/description_model1"
        android:textColor="#9095A6"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/button_add"
        app:layout_constraintTop_toTopOf="@id/guidelineh1" />

    <TextView
        android:id="@+id/descrlongue"
        android:layout_width="307dp"
        android:layout_height="68dp"
        android:layout_marginTop="89dp"
        android:elevation="24dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/large_description3"
        android:textColor="#9095A6"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/button_add"
        app:layout_constraintTop_toTopOf="@id/guidelineh1" />

    <TextView
        android:id="@+id/prix1"
        android:layout_width="70dp"
        android:layout_height="29dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="33.5dp"
        android:elevation="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/price3"
        android:textColor="#5B41FF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/button_add"
        app:layout_constraintTop_toTopOf="@id/guidelineh1"
        app:layout_editor_absoluteX="8dp"
        app:layout_editor_absoluteY="125dp" />

    <ImageView
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="298dp"
        android:elevation="15dp"
        android:contentDescription="@string/watch_picture"
        app:layout_constraintTop_toTopOf="@id/guidelineh1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/purple_button" />

    <TextView
        android:id="@+id/add"
        android:layout_width="107dp"
        android:layout_height="23dp"
        android:elevation="24dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/button_add"
        app:layout_constraintEnd_toEndOf="@id/button_add"
        app:layout_constraintTop_toTopOf="@id/button_add"
        app:layout_constraintBottom_toBottomOf="@id/button_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>